Application Layer folders Created

--- a/CMS.AI.Application/CMS.AI.Application.csproj
+++ b/CMS.AI.Application/CMS.AI.Application.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Common\" />
+    <Folder Include="Contents\Commands\" />
+    <Folder Include="Contents\DTOs\" />
+    <Folder Include="Contents\Queries\" />
+    <Folder Include="Interfaces\" />
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
