--- a/CMS.AI.Application/CMS.AI.Application.csproj
+++ b/CMS.AI.Application/CMS.AI.Application.csproj
@@ -7,12 +7,19 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Common\" />
     <Folder Include="Contents\Commands\" />
     <Folder Include="Contents\DTOs\" />
     <Folder Include="Contents\Queries\" />
     <Folder Include="Interfaces\" />
     <Folder Include="Services\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.13" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CMS.AI.Domain\CMS.AI.Domain.csproj" />
   </ItemGroup>
 
 </Project>
