--- a/CMS.AI.Infrastructure/CMS.AI.Infrastructure.csproj
+++ b/CMS.AI.Infrastructure/CMS.AI.Infrastructure.csproj
@@ -8,8 +8,14 @@
 
   <ItemGroup>
     <Folder Include="Identity\" />
-    <Folder Include="Services\" />
-    <Folder Include="Persistance\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.13" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CMS.AI.Domain\CMS.AI.Domain.csproj" />
   </ItemGroup>
 
 </Project>
