Complete Docker Compose Setup

--- a/CMS.AI.Api/docker-compose.yml
+++ b/CMS.AI.Api/docker-compose.yml
@@ -1,18 +1,81 @@
-redis:
+version: '3.8'
+
+services:
+  sqlserver:
+    image: mcr.microsoft.com/mssql/server:2022-latest
+    container_name: cms_sqlserver
+    environment:
+      - ACCEPT_EULA=Y
+      - MSSQL_SA_PASSWORD=Sql.12345678
+      - MSSQL_PID=Developer
+    ports:
+      - "1433:1433"
+    volumes:
+      - sqlserver_data:/var/opt/mssql
+    networks:
+      - cms_network
+    healthcheck:
+      test: /opt/mssql-tools/bin/sqlcmd -S localhost -U sa -P "Sql.12345678" -Q "SELECT 1" || exit 1
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  redis:
     image: redis:latest
     container_name: cms_redis
     ports:
       - "6379:6379"
+    volumes:
+      - redis_data:/data
     networks:
       - cms_network
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   elasticsearch:
-    image: elasticsearch:8.11.1
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.11.1
     container_name: cms_elasticsearch
     environment:
       - discovery.type=single-node
       - xpack.security.enabled=false
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
     ports:
       - "9200:9200"
+    volumes:
+      - elasticsearch_data:/usr/share/elasticsearch/data
     networks:
       - cms_network
+    healthcheck:
+      test: ["CMD-SHELL", "curl -s http://localhost:9200 || exit 1"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+
+  kibana:
+    image: docker.elastic.co/kibana/kibana:8.11.1
+    container_name: cms_kibana
+    ports:
+      - "5601:5601"
+    environment:
+      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
+    networks:
+      - cms_network
+    depends_on:
+      elasticsearch:
+        condition: service_healthy
+
+networks:
+  cms_network:
+    name: cms_network
+    driver: bridge
+
+volumes:
+  sqlserver_data:
+    name: cms_sqlserver_data
+  redis_data:
+    name: cms_redis_data
+  elasticsearch_data:
+    name: cms_elasticsearch_data
