--- a/CMS.AI.Api/docker-compose.yml
+++ b/CMS.AI.Api/docker-compose.yml
@@ -39,20 +39,34 @@ services:
     image: docker.elastic.co/elasticsearch/elasticsearch:8.11.1
     container_name: cms_elasticsearch
     environment:
+      - node.name=elasticsearch
+      - cluster.name=es-docker-cluster
       - discovery.type=single-node
+      - bootstrap.memory_lock=true
       - xpack.security.enabled=false
       - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
-    ports:
-      - "9200:9200"
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+      nofile:
+        soft: 65536
+        hard: 65536
     volumes:
       - elasticsearch_data:/usr/share/elasticsearch/data
+    ports:
+      - "9200:9200"
     networks:
       - cms_network
+    deploy:
+      resources:
+        limits:
+          memory: 1g
     healthcheck:
-      test: ["CMD-SHELL", "curl -s http://localhost:9200 || exit 1"]
+      test: curl -s http://localhost:9200/_cat/health >/dev/null || exit 1
       interval: 30s
       timeout: 10s
-      retries: 3
+      retries: 5
 
   kibana:
     image: docker.elastic.co/kibana/kibana:8.11.1
