--- a/CMS.AI.Application/CMS.AI.Application.csproj
+++ b/CMS.AI.Application/CMS.AI.Application.csproj
@@ -12,11 +12,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="AutoMapper" Version="8.1.1" />
-    <PackageReference Include="FluentValidation" Version="8.6.3" />
-    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="8.6.3" />
-    <PackageReference Include="MediatR" Version="8.1.0" />
+    <PackageReference Include="FluentValidation" Version="11.11.0" />
+    <PackageReference Include="MediatR" Version="12.4.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.13" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.2" />
   </ItemGroup>
 
   <ItemGroup>
