--- a/CMS.AI.Infrastructure/CMS.AI.Infrastructure.csproj
+++ b/CMS.AI.Infrastructure/CMS.AI.Infrastructure.csproj
@@ -14,6 +14,7 @@
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
 		<PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="8.0.13" />
+		<PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="8.0.13" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.13" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.13" />
 		<PackageReference Include="Microsoft.Extensions.Options" Version="8.0.13" />
