--- a/CMS.AI.Infrastructure/CMS.AI.Infrastructure.csproj
+++ b/CMS.AI.Infrastructure/CMS.AI.Infrastructure.csproj
@@ -7,6 +7,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Microsoft.Azure.Management.Search.Fluent" Version="1.38.1" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.13" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.13" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.13">
@@ -18,6 +19,7 @@
 		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.13" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.13" />
 		<PackageReference Include="Microsoft.Extensions.Options" Version="8.0.13" />
+		<PackageReference Include="NEST" Version="7.17.5" />
 	</ItemGroup>
 
 	<ItemGroup>
