--- a/CMS.AI.Infrastructure/CMS.AI.Infrastructure.csproj
+++ b/CMS.AI.Infrastructure/CMS.AI.Infrastructure.csproj
@@ -18,6 +18,7 @@
 		<PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="8.0.13" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.13" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.13" />
+		<PackageReference Include="Microsoft.Extensions.Http" Version="8.0.1" />
 		<PackageReference Include="Microsoft.Extensions.Options" Version="8.0.13" />
 		<PackageReference Include="NEST" Version="7.17.5" />
 	</ItemGroup>
